[package]
name = "linhash"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = "1.5"
rkyv = "0.8"
thiserror = "2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }

[dev-dependencies]
tempfile = "3.24"
map-test-generator = { path = "../map-test-generator" }

[features]
default = ["hash", "delete"]
hash = ["dep:xxhash-rust"]
delete = []
nohash = []