[package]
name = "linhash"
version = "0.1.0"
edition = "2024"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
license = "MIT"
description = "Linear Hashing implementation."
repository = "https://github.com/akiradeveloper/LinHash"
readme = "../README.md"
categories = ["algorithms", "data-structures", "database-implementations"]
keywords = ["linear-hashing", "hash-table", "hashmap"]

[dependencies]
crc32fast = "1.5"
libc = "0.2.180"
parking_lot = "0.12.5"
rkyv = "0.8"
rustix = "1.1"
thiserror = "2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }

[dev-dependencies]
tempfile = "3.24"
map-test-generator = { path = "../map-test-generator" }

[features]
default = ["hash", "delete"]
hash = ["dep:xxhash-rust"]
delete = []
nohash = []
