[package]
name = "linhash"
version = "0.3.4"
edition = "2024"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
license = "MIT"
description = "Linear Hashing implementation."
repository = "https://github.com/akiradeveloper/LinHash"
readme = "../README.md"
categories = ["algorithms", "data-structures", "database-implementations"]
keywords = ["linear-hashing", "hash-table", "hashmap"]

[dependencies]
crc32fast = "1.5"
crossbeam = "0.8"
genawaiter = "0.99.1"
libc = "0.2.180"
parking_lot = "0.12"
rkyv = "0.8"
rustix = { version = "1.1", features = ["fs"] }
thiserror = "2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"], optional = true }

[dev-dependencies]
rand = "0.9"
tempfile = "3.24"
map-test-generator = { path = "../map-test-generator" }

[features]
default = ["hash"]
hash = ["dep:xxhash-rust"]
atomic-write = []
